--- a/inst/tutorials/Day04_GLM/lab-Day4_GLM.Rmd
+++ b/inst/tutorials/Day04_GLM/lab-Day4_GLM.Rmd
@@ -982,7 +982,7 @@ Let' take a look at the variables
 
 ```{r homeplayground, include=TRUE, exercise = TRUE, exercise.setup = "homeplaydata"}
 
-summary(MediaElec)
+summary(MediaElecData)
 ```
 
 
