--- a/inst/tutorials/Day04_GLM/lab-Day4_GLM.Rmd
+++ b/inst/tutorials/Day04_GLM/lab-Day4_GLM.Rmd
@@ -22,6 +22,8 @@ knitr::opts_chunk$set(
 	warning = FALSE
 )
 
+knitr::knit_engines$set("html") # for linux machines
+
 source("../R/helper_code.R")
 
 # Check whether required packages are installed
